--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="menu_logout">Logout</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="AddImage">Add Image</string>
+    <string name="CategoryName">Category name</string>
+    <string name="Save">Save</string>
 </resources>
