--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="AddImage">Add Image</string>
+    <string name="ChangeImage">Change Image</string>
     <string name="CategoryName">Category name</string>
     <string name="Save">Save</string>
 
